; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_utfrune.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_utfrune.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Runesync = common dso_local global i64 0, align 8
@Runeself = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @utfrune(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @Runesync, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i8* @strchr(i8* %13, i64 %14)
  store i8* %15, i8** %3, align 8
  br label %50

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %45, %34, %16
  %18 = load i8*, i8** %4, align 8
  %19 = bitcast i8* %18 to i64*
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @Runeself, align 8
  %23 = icmp slt i64 %21, %22
  br i1 %23, label %24, label %37

24:                                               ; preds = %17
  %25 = load i64, i64* %6, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i8* null, i8** %3, align 8
  br label %50

28:                                               ; preds = %24
  %29 = load i64, i64* %6, align 8
  %30 = load i64, i64* %5, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = load i8*, i8** %4, align 8
  store i8* %33, i8** %3, align 8
  br label %50

34:                                               ; preds = %28
  %35 = load i8*, i8** %4, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %4, align 8
  br label %17

37:                                               ; preds = %17
  %38 = load i8*, i8** %4, align 8
  %39 = call i32 @chartorune(i64* %7, i8* %38)
  store i32 %39, i32* %8, align 4
  %40 = load i64, i64* %7, align 8
  %41 = load i64, i64* %5, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %45

43:                                               ; preds = %37
  %44 = load i8*, i8** %4, align 8
  store i8* %44, i8** %3, align 8
  br label %50

45:                                               ; preds = %37
  %46 = load i32, i32* %8, align 4
  %47 = load i8*, i8** %4, align 8
  %48 = sext i32 %46 to i64
  %49 = getelementptr inbounds i8, i8* %47, i64 %48
  store i8* %49, i8** %4, align 8
  br label %17

50:                                               ; preds = %43, %32, %27, %12
  %51 = load i8*, i8** %3, align 8
  ret i8* %51
}

declare dso_local i8* @strchr(i8*, i64) #1

declare dso_local i32 @chartorune(i64*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
